--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/pizzapanther/express-example#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "nodemon": "^1.17.4",
-    "nunjucks": "^3.1.2"
+    "nunjucks": "^3.1.2",
+    "pg-promise": "^8.4.4"
   }
 }
